k8s/apps/gateway/gateway-compat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: go-video
  labels:
    app.kubernetes.io/name: kong
    app.kubernetes.io/instance: kong
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/instance: kong
  ports:
    - name: proxy
      port: 80
      targetPort: 8000
